@@ -1,3 +1,9 @@
+2013-09-17  Sebastien Binet  <binet@farnsworth>
+
+	* tagging PyUtils-00-12-21-05
+	* fixing bug #102599: handle aliases (like LFN:bla)
+	* M python/AthFile/impl.py
+
 2013-09-16  Sebastien Binet  <binet@farnsworth>
 
 	* tagging PyUtils-00-12-21-04
